# python-rmi

./: README.md  client.py  pyproject.toml  server.py
